--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\raelx.RAELX\AppData\Local\Temp\testng-eclipse--1071597251\testng-customsuite.xml</span>
+                    <span>C:\Users\raelx.RAELX\AppData\Local\Temp\testng-eclipse--130973576\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">5 methods,   5 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,7 +102,27 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.automation.tests.FirstTest" hash-for-method="resgister">resgister</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.automation.tests.services.InsumoTest" hash-for-method="addProduct">addProduct</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.automation.tests.services.InsumoTest" hash-for-method="deleteProduct">deleteProduct</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.automation.tests.services.InsumoTest" hash-for-method="getAll">getAll</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.automation.tests.services.InsumoTest" hash-for-method="getByIdUsingPathParam">getByIdUsingPathParam</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.automation.tests.services.InsumoTest" hash-for-method="getByIdUsingQueryParam">getByIdUsingQueryParam</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,14 +140,42 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.automation.tests.FirstTest</span>
+              <span class="class-name">com.automation.tests.services.InsumoTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="resgister">
-                  </a> <!-- resgister -->
-                  <span class="method-name">resgister</span>
+                  <a name="addProduct">
+                  </a> <!-- addProduct -->
+                  <span class="method-name">addProduct</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="deleteProduct">
+                  </a> <!-- deleteProduct -->
+                  <span class="method-name">deleteProduct</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="getAll">
+                  </a> <!-- getAll -->
+                  <span class="method-name">getAll</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="getByIdUsingPathParam">
+                  </a> <!-- getByIdUsingPathParam -->
+                  <span class="method-name">getByIdUsingPathParam</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="getByIdUsingQueryParam">
+                  </a> <!-- getByIdUsingQueryParam -->
+                  <span class="method-name">getByIdUsingQueryParam</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +183,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\raelx.RAELX\AppData\Local\Temp\testng-eclipse--1071597251\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\raelx.RAELX\AppData\Local\Temp\testng-eclipse--130973576\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,7 +192,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.automation.tests.FirstTest&quot;/&gt;
+      &lt;class name=&quot;com.automation.tests.services.InsumoTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -184,16 +232,32 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(5);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'resgister')
-data.setCell(0, 2, 'com.automation.tests.FirstTest')
-data.setCell(0, 3, 12418);
+data.setCell(0, 1, 'addProduct')
+data.setCell(0, 2, 'com.automation.tests.services.InsumoTest')
+data.setCell(0, 3, 1953);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'getAll')
+data.setCell(1, 2, 'com.automation.tests.services.InsumoTest')
+data.setCell(1, 3, 100);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'deleteProduct')
+data.setCell(2, 2, 'com.automation.tests.services.InsumoTest')
+data.setCell(2, 3, 64);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'getByIdUsingQueryParam')
+data.setCell(3, 2, 'com.automation.tests.services.InsumoTest')
+data.setCell(3, 3, 63);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'getByIdUsingPathParam')
+data.setCell(4, 2, 'com.automation.tests.services.InsumoTest')
+data.setCell(4, 3, 56);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 12 seconds</span>
+              <span class="suite-total-time">Total running time: 2 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -219,23 +283,47 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.automation.tests.FirstTest</div> <!-- chronological-class-name -->
-              <div class="configuration-suite before">
-                <span class="method-name">getDriver</span>
-                <span class="method-start">0 ms</span>
-              </div> <!-- configuration-suite before -->
+              <div class="chronological-class-name">com.automation.tests.services.InsumoTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
-                <span class="method-name">openBrowser</span>
-                <span class="method-start">554 ms</span>
+                <span class="method-name">setUp</span>
+                <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">resgister</span>
-                <span class="method-start">4272 ms</span>
+                <span class="method-name">addProduct</span>
+                <span class="method-start">486 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">closeBrowser</span>
-                <span class="method-start">16691 ms</span>
-              </div> <!-- configuration-method after -->
+              <div class="test-method">
+                <span class="method-name">deleteProduct</span>
+                <span class="method-start">2446 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp</span>
+                <span class="method-start">2446 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp</span>
+                <span class="method-start">2516 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">getAll</span>
+                <span class="method-start">2519 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">getByIdUsingPathParam</span>
+                <span class="method-start">2621 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp</span>
+                <span class="method-start">2621 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">getByIdUsingQueryParam</span>
+                <span class="method-start">2677 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp</span>
+                <span class="method-start">2677 ms</span>
+              </div> <!-- configuration-method before -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
