errors in InsumoTest were fixed

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\raelx.RAELX\AppData\Local\Temp\testng-eclipse--130973576\testng-customsuite.xml</span>
+                    <span>C:\Users\raelx.RAELX\AppData\Local\Temp\testng-eclipse--596978562\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,12 +102,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.automation.tests.services.InsumoTest" hash-for-method="addProduct">addProduct</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.automation.tests.services.InsumoTest" hash-for-method="addInsumo">addInsumo</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.automation.tests.services.InsumoTest" hash-for-method="deleteProduct">deleteProduct</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.automation.tests.services.InsumoTest" hash-for-method="deleteInsumo">deleteInsumo</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -145,16 +145,16 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="addProduct">
-                  </a> <!-- addProduct -->
-                  <span class="method-name">addProduct</span>
+                  <a name="addInsumo">
+                  </a> <!-- addInsumo -->
+                  <span class="method-name">addInsumo</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="deleteProduct">
-                  </a> <!-- deleteProduct -->
-                  <span class="method-name">deleteProduct</span>
+                  <a name="deleteInsumo">
+                  </a> <!-- deleteInsumo -->
+                  <span class="method-name">deleteInsumo</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -183,7 +183,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\raelx.RAELX\AppData\Local\Temp\testng-eclipse--130973576\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\raelx.RAELX\AppData\Local\Temp\testng-eclipse--596978562\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -234,21 +234,21 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(5);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'addProduct')
+data.setCell(0, 1, 'addInsumo')
 data.setCell(0, 2, 'com.automation.tests.services.InsumoTest')
-data.setCell(0, 3, 1953);
+data.setCell(0, 3, 2162);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'getAll')
 data.setCell(1, 2, 'com.automation.tests.services.InsumoTest')
-data.setCell(1, 3, 100);
+data.setCell(1, 3, 103);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'deleteProduct')
+data.setCell(2, 1, 'deleteInsumo')
 data.setCell(2, 2, 'com.automation.tests.services.InsumoTest')
-data.setCell(2, 3, 64);
+data.setCell(2, 3, 63);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'getByIdUsingQueryParam')
 data.setCell(3, 2, 'com.automation.tests.services.InsumoTest')
-data.setCell(3, 3, 63);
+data.setCell(3, 3, 60);
 data.setCell(4, 0, 4)
 data.setCell(4, 1, 'getByIdUsingPathParam')
 data.setCell(4, 2, 'com.automation.tests.services.InsumoTest')
@@ -289,40 +289,40 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">addProduct</span>
-                <span class="method-start">486 ms</span>
+                <span class="method-name">addInsumo</span>
+                <span class="method-start">460 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">deleteProduct</span>
-                <span class="method-start">2446 ms</span>
+                <span class="method-name">deleteInsumo</span>
+                <span class="method-start">2632 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method before">
                 <span class="method-name">setUp</span>
-                <span class="method-start">2446 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">2516 ms</span>
+                <span class="method-start">2632 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">getAll</span>
-                <span class="method-start">2519 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">getByIdUsingPathParam</span>
-                <span class="method-start">2621 ms</span>
+                <span class="method-start">2721 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method before">
                 <span class="method-name">setUp</span>
-                <span class="method-start">2621 ms</span>
+                <span class="method-start">2721 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">getByIdUsingPathParam</span>
+                <span class="method-start">2826 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp</span>
+                <span class="method-start">2826 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">getByIdUsingQueryParam</span>
-                <span class="method-start">2677 ms</span>
+                <span class="method-start">2882 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method before">
                 <span class="method-name">setUp</span>
-                <span class="method-start">2677 ms</span>
+                <span class="method-start">2882 ms</span>
               </div> <!-- configuration-method before -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
