--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,24 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="81b0a2">  <td>18/10/15 17:10:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InsumoTest.addProduct()[pri:0, instance:com.automation.tests.services.InsumoTest@26653222]">addProduct</td> 
+<tr bgcolor="81b0a2">  <td>18/10/16 14:48:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InsumoTest.addInsumo()[pri:0, instance:com.automation.tests.services.InsumoTest@26653222]">addInsumo</td> 
   <td>main@1225439493</td>   <td></td> </tr>
-<tr bgcolor="81b0a2">  <td>18/10/15 17:10:25</td>   <td>1960</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InsumoTest.deleteProduct()[pri:0, instance:com.automation.tests.services.InsumoTest@26653222]">deleteProduct</td> 
+<tr bgcolor="81b0a2">  <td>18/10/16 14:48:18</td>   <td>2172</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InsumoTest.deleteInsumo()[pri:0, instance:com.automation.tests.services.InsumoTest@26653222]">deleteInsumo</td> 
   <td>main@1225439493</td>   <td></td> </tr>
-<tr bgcolor="81b0a2">  <td>18/10/15 17:10:25</td>   <td>2033</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InsumoTest.getAll()[pri:0, instance:com.automation.tests.services.InsumoTest@26653222]">getAll</td> 
+<tr bgcolor="81b0a2">  <td>18/10/16 14:48:18</td>   <td>2261</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InsumoTest.getAll()[pri:0, instance:com.automation.tests.services.InsumoTest@26653222]">getAll</td> 
   <td>main@1225439493</td>   <td></td> </tr>
-<tr bgcolor="81b0a2">  <td>18/10/15 17:10:25</td>   <td>2135</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InsumoTest.getByIdUsingPathParam()[pri:0, instance:com.automation.tests.services.InsumoTest@26653222]">getByIdUsingPathParam</td> 
+<tr bgcolor="81b0a2">  <td>18/10/16 14:48:18</td>   <td>2366</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InsumoTest.getByIdUsingPathParam()[pri:0, instance:com.automation.tests.services.InsumoTest@26653222]">getByIdUsingPathParam</td> 
   <td>main@1225439493</td>   <td></td> </tr>
-<tr bgcolor="81b0a2">  <td>18/10/15 17:10:25</td>   <td>2191</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InsumoTest.getByIdUsingQueryParam()[pri:0, instance:com.automation.tests.services.InsumoTest@26653222]">getByIdUsingQueryParam</td> 
+<tr bgcolor="81b0a2">  <td>18/10/16 14:48:18</td>   <td>2422</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InsumoTest.getByIdUsingQueryParam()[pri:0, instance:com.automation.tests.services.InsumoTest@26653222]">getByIdUsingQueryParam</td> 
   <td>main@1225439493</td>   <td></td> </tr>
-<tr bgcolor="81b0a2">  <td>18/10/15 17:10:23</td>   <td>-486</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;InsumoTest.setUp()[pri:0, instance:com.automation.tests.services.InsumoTest@26653222]">&gt;&gt;setUp</td> 
+<tr bgcolor="81b0a2">  <td>18/10/16 14:48:15</td>   <td>-459</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;InsumoTest.setUp()[pri:0, instance:com.automation.tests.services.InsumoTest@26653222]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td>main@1225439493</td>   <td></td> </tr>
-<tr bgcolor="81b0a2">  <td>18/10/15 17:10:25</td>   <td>1960</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;InsumoTest.setUp()[pri:0, instance:com.automation.tests.services.InsumoTest@26653222]">&gt;&gt;setUp</td> 
+<tr bgcolor="81b0a2">  <td>18/10/16 14:48:18</td>   <td>2172</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;InsumoTest.setUp()[pri:0, instance:com.automation.tests.services.InsumoTest@26653222]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td>main@1225439493</td>   <td></td> </tr>
-<tr bgcolor="81b0a2">  <td>18/10/15 17:10:25</td>   <td>2030</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;InsumoTest.setUp()[pri:0, instance:com.automation.tests.services.InsumoTest@26653222]">&gt;&gt;setUp</td> 
+<tr bgcolor="81b0a2">  <td>18/10/16 14:48:18</td>   <td>2261</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;InsumoTest.setUp()[pri:0, instance:com.automation.tests.services.InsumoTest@26653222]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td>main@1225439493</td>   <td></td> </tr>
-<tr bgcolor="81b0a2">  <td>18/10/15 17:10:25</td>   <td>2135</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;InsumoTest.setUp()[pri:0, instance:com.automation.tests.services.InsumoTest@26653222]">&gt;&gt;setUp</td> 
+<tr bgcolor="81b0a2">  <td>18/10/16 14:48:18</td>   <td>2366</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;InsumoTest.setUp()[pri:0, instance:com.automation.tests.services.InsumoTest@26653222]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td>main@1225439493</td>   <td></td> </tr>
-<tr bgcolor="81b0a2">  <td>18/10/15 17:10:25</td>   <td>2191</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;InsumoTest.setUp()[pri:0, instance:com.automation.tests.services.InsumoTest@26653222]">&gt;&gt;setUp</td> 
+<tr bgcolor="81b0a2">  <td>18/10/16 14:48:18</td>   <td>2422</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;InsumoTest.setUp()[pri:0, instance:com.automation.tests.services.InsumoTest@26653222]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td>main@1225439493</td>   <td></td> </tr>
 </table>
